# vulkan_validation_layer_repro_android

./: AndroidManifest.xml  CMakeLists.txt  LICENSE  build.py  conanfile.py  main.cpp
assets/: indirect_prepare.spv
